Fix spacing, item positions and shrinking

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,11 +13,12 @@ min-height: 100vh;
 ul{
     list-style: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 0;
     gap:24px;
     flex: 1;
+    max-width: 85%;
+    padding: 0;
 }
 
 a{
@@ -41,7 +42,7 @@ button{
     display: flex;
     justify-content: space-around;
     background-color: #1F2937;
-    padding: 0px 150px;
+    
 }
 
 .header a{
@@ -53,22 +54,34 @@ button{
     display: flex;
     flex-direction: column;
     flex: 1;
+
     flex-shrink: 0;
 }
 .hero{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    flex: 1;  
     background-color: #1F2937;
+    justify-content: center;
+}
+.hero-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 85%;
     color: #F9FAF8;
     flex: 1;
-
+    flex-wrap: wrap;
+    gap: 24px;
+    padding-bottom: 24px;
 }
 
 .hero img{
-    width: 400px;
+    max-width: auto;
+    max-height: 300px;
+    width: auto;
     height: auto;
-    box-shadow: 0px 0px 10px #090c10;
+    box-shadow: 0px 0px 24px #090c10;
+    flex-shrink: 1;
 }
 
 .hero-text{
@@ -76,6 +89,7 @@ button{
     flex-direction: column;
     text-wrap: wrap;
     flex-basis: 400px;
+    flex-shrink: 0;
     align-items: flex-start;
     font-size: 18px;
     color: #E5E7EB;
@@ -107,6 +121,7 @@ button{
     display: flex;
     justify-content: center;
     gap: 24px;
+    flex-wrap: wrap;
 }
 
 .information .card-container .card{
@@ -152,20 +167,51 @@ button{
     font-size: 36px;
     font-weight: 100;
     color: #1F2937;
-    width: 800px;
     margin: 0;
 }
 .quote figcaption{
+    display: block;
     font-style: normal;
     font-size: 18px;
     font-weight: bold;
     text-align: end;
     color: #1F2937;
-    width: 800px;
-    
+}
+.quote blockquote, .quote figcaption{
+
+    width: 65%;
+}
+.modal{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.hero, .information, .quote{
+.modal-container{
+    background-color: #3882F6;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 60%;
+    min-height: 100px;
+    padding: 16px 100px;
+    gap:24px;
+}
+
+.modal-container button{
+    border: 2px solid #F9FAF8;
+}
+
+.modal-text{
+    color: #F9FAF8;
+}
+
+.modal-text h3, .modal-text p{
+    margin: 0;
+}
+.hero, .information, .quote, .modal{
     flex-basis: 400px;
 }
 .footer{
